<resources>
    <string name="app_name">Ресторан Марка</string>
    <string name="main_menu_title_menu">Меню</string>
    <string name="main_menu_title_news">Новости \n Акции</string>
    <string name="main_menu_title_about">О ресторане</string>
    <string name="main_menu_title_photo_reports">Фотоотчеты</string>
    <string name="main_menu_title_delivery">Условия \n доставки</string>
    <string name="category_garnish">Гарниры</string>
    <string name="category_meat">Вторые блюда</string>
    <string name="category_dessert">Десерты</string>
    <string name="category_drinkables">Напитки</string>
    <string name="category_salad">Салаты</string>
    <string name="category_sauce">Соусы</string>
    <string name="category_snack">Горячие закуски</string>
    <string name="category_soup">Супы</string>
    <string name="birthday">В день рождения!</string>
    <string name="birthday_text">В день вашего рождения с радостью предоставляем вам скидку 20%! Акция действует 7 дней со дня рождения.</string>
    <string name="two_one">Акция 2+1</string>
    <string name="two_one_text">При покупке двух блюд вам предоставляется возможность бесплатно выбрать любой салат из нашего меню</string>
    <string name="snow">Акция "Снежки"</string>
    <string name="snow_text">Играй и выигрывай вкусные подарки! При покупке от 1000 рублей с доставкой выигрывай вкусные призы!</string>
    <string name="hot">Акция "Горячие выходные"</string>
    <string name="hot_text">Только в новогодние выходные! Покупай коктейль из нашего ассортимента и выигрывай два коктейля в подарок!</string>
    <string name="news">Акции</string>
    <string name="photo">На данный момент фотографии отсутствуют</string>
    <string name="delivery">Функция доставки на данный момент недоступна</string>
    <string name="about">Вокруг кипит жизнь, проносятся автомобили, образуются и исчезают пробки, подгоняют пешеходов мигающие светофоры.

На пересечении оживленных городских магистралей, среди шума и суеты обосновался ресторан «Марка» — тихий уголок, где можно отдохнуть от надоевшей повседневности, расслабиться под приятную музыку, пообщаться с друзьями и, разумеется, вкусно покушать.

\n Ресторан «Марка» — это уникальное место для общения и отдыха.

\n Здесь в воздухе разлита атмосфера восточного гостеприимства, а оригинальное оформление интерьера погружает гостей в мир легенд Древнего Египта. Здесь созданы все условия для полноценного отдыха. Широкий выбор первых и вторых блюд, салатов и десертов, а также богатая барная карта.

\n Если вы приверженец здорового образа жизни, но у вас нет времени и возможности позавтракать дома, с понедельника по пятницу, с 10 часов утра до полудня мы будем рады накормить вас полезным, питательным и вкусным завтраком.

\n А с 11:00 до 15:00 в ресторане «Марка» все желающие могут заказать бизнес-ланч. У нас всегда вкусные обеды, которые проходят в атмосфере безмятежности и спокойствия, располагающей к расслаблению и отчуждению от внешнего мира.

Ресторан «Марка» — идеальное место для проведения переговоров, дружеских встреч и романтических свиданий!

\n Хотите провести закрытую вечеринку? Ресторан «Марка» к вашим услугам!

\n Для вечеринки идеально подойдет зеркальная VIP-зона, где одновременно можно организовать и праздничное застолье, и зажигательную дискотеку.

\n Размер минимального заказа на корпоративные мероприятия определяется по индивидуальной договоренности с администратором бара, телефон: 11-11-11.

Ресторан «Марка» — уютное место для вкусного отдыха!

\n Мы работаем ежедневно с 10:00 до 02:00 , в пятницу и субботу с 10:00 до 03:00.
1-й этаж, т/ц «Заря».

\n Телефон для справок и бронирования: 333-000.</string>
    <string name="delivery_text">
        Оплата продукции:\n
— Наличный и безналичный (по предварительной договоренности с оператором) расчёт при получении заказа\n
        Возврат продукции:\n
Гость не может сделать отказ от Продукции надлежащего качества после ее получения.\n
Гость вправе вернуть Продукцию ненадлежащего качества и потребовать его замену или возврата уплаченной денежной суммы за нее. Возврат денежной суммы производится Гостю в течение 3 рабочих дней с момента поступления письменного заявления.\n
Полезные советы:\n
Если у Вас есть возможность сделать заказ заранее (хотя бы за 2 часа), воспользуйтесь ею, пожалуйста. В этом случае мы доставим Вам выбранные блюда точно в срок вне зависимости от ситуации на дорогах города.\n
Если оператор не связался с Вами в течение 15 минут (это может произойти по причине некорректного ввода данных, сбоя в работе интернет провайдера и т.п.), позвоните в службу поддержки по номеру 33-00-33.\n
Чтобы доставка пиццы осуществлялась без задержек, постарайтесь в отведенное для заказа время не занимать указанный в Заказе контактный телефон.\n
Мы будем благодарны Вам за замечания и предложения по улучшению качества блюд и обслуживания</string>
</resources>
