<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/AppToolbar" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/news_one"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@color/news">

                <ImageView
                    android:id="@+id/birthday"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_birthday">

                </ImageView>

                <TextView
                    style="@style/textNewsStyle"
                    android:id="@+id/birthday_cap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/birthday"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/birthday" />

                <TextView
                    android:id="@+id/birthday_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/birthday"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="40sp"
                    android:text="@string/birthday_text" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/news_two"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@color/news">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/two_one">

                </ImageView>

                <TextView
                    style="@style/textNewsStyle"
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/two_one" />

                <TextView
                    android:id="@+id/textViewq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="40sp"
                    android:text="@string/two_one_text" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/news_tree"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@color/news">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/snow">

                </ImageView>

                <TextView
                    style="@style/textNewsStyle"
                    android:id="@+id/text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/image3"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/snow" />

                <TextView
                    android:id="@+id/text3_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/image3"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="40sp"
                    android:text="@string/snow_text" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/news_four"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:background="@color/news">

                <ImageView
                    android:id="@+id/image4"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/hot">

                </ImageView>

                <TextView
                    style="@style/textNewsStyle"
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image4"
                    android:paddingLeft="16sp"
                    android:paddingRight="16sp"
                    android:text="@string/two_one" />

                <TextView
                    android:id="@+id/text_View4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/image4"
                    android:paddingLeft="20sp"
                    android:paddingRight="16sp"
                    android:paddingTop="40sp"
                    android:text="@string/two_one_text" />

            </RelativeLayout>
            </LinearLayout>
        </ScrollView>






</LinearLayout>