<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/AppToolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/category_garnish"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/category_garnish"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#33000000"
                android:padding="10dp">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category_garnish"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/category_snack"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/category_snack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#33000000"
                android:padding="10dp">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category_snack"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/category_meat"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/category_meat"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#33000000"
                android:padding="10dp">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category_meat"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/category_soup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/category_soup"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#33000000"
                android:padding="10dp">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category_soup"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/category_dessert"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/category_dessert" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#33000000"
                android:padding="10dp">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category_dessert"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/category_drinkables"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/category_drinkables"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#33000000"
                android:padding="10dp">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category_drinkables"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/category_sauce"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/category_sauce"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#33000000"
                android:padding="10dp">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category_sauce"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/category_salad"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/category_salad"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#33000000"
                android:padding="10dp">

                <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/category_salad"
                    android:textSize="20sp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>